chore: WSC-1319 clean up code (#93)
* chore: remove unused audio bridge and video room requests
* fix: check the meeting participants list correctly when last participant left