@@ -24,7 +24,6 @@ import com.zextras.carbonio.chats.core.service.RoomService;
 import com.zextras.carbonio.chats.core.web.security.UserPrincipal;
 import com.zextras.carbonio.meeting.model.MeetingDto;
 import com.zextras.carbonio.meeting.model.MeetingTypeDto;
-import io.ebean.annotation.Transactional;
 import io.vavr.control.Option;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
@@ -33,7 +32,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Singleton
 public class MeetingServiceImpl implements MeetingService {
@@ -80,9 +78,7 @@ public class MeetingServiceImpl implements MeetingService {
                           null);
                   roomService.setMeetingIntoRoom(room, meeting);
                   eventDispatcher.sendToUserExchange(
-                      room.getSubscriptions().stream()
-                          .map(Subscription::getUserId)
-                          .collect(Collectors.toList()),
+                      room.getSubscriptions().stream().map(Subscription::getUserId).toList(),
                       MeetingCreated.create()
                           .meetingId(UUID.fromString(meeting.getId()))
                           .roomId(roomId));
@@ -117,7 +113,7 @@ public class MeetingServiceImpl implements MeetingService {
                           .getMembers()
                           .stream()
                           .map(m -> m.getUserId().toString())
-                          .collect(Collectors.toList()),
+                          .toList(),
                       Boolean.TRUE.equals(active)
                           ? MeetingStarted.create()
                               .meetingId(UUID.fromString(updatedMeeting.getId()))
@@ -135,9 +131,7 @@ public class MeetingServiceImpl implements MeetingService {
   @Override
   public List<MeetingDto> getMeetings(UserPrincipal currentUser) {
     List<String> roomsIds =
-        roomService.getRoomsIds(currentUser).stream()
-            .map(UUID::toString)
-            .collect(Collectors.toList());
+        roomService.getRoomsIds(currentUser).stream().map(UUID::toString).toList();
     List<Meeting> meetings = meetingRepository.getByRoomsIds(roomsIds);
     return meetingMapper.ent2dto(meetings);
   }
@@ -151,14 +145,14 @@ public class MeetingServiceImpl implements MeetingService {
                 () ->
                     new NotFoundException(
                         String.format("Meeting with id '%s' not found", meetingId)));
-    membersService
+    if (membersService
         .getByUserIdAndRoomId(currentUser.getUUID(), UUID.fromString(meeting.getRoomId()))
-        .orElseThrow(
-            () ->
-                new ForbiddenException(
-                    String.format(
-                        "User '%s' hasn't access to the meeting with id '%s'",
-                        currentUser.getId(), meetingId)));
+        .isEmpty()) {
+      throw new ForbiddenException(
+          String.format(
+              "User '%s' hasn't access to the meeting with id '%s'",
+              currentUser.getId(), meetingId));
+    }
     return meetingMapper.ent2dto(meeting);
   }
 
@@ -184,29 +178,6 @@ public class MeetingServiceImpl implements MeetingService {
   }
 
   @Override
-  @Transactional
-  public Meeting getsOrCreatesMeetingEntityByRoomId(UUID roomId, UserPrincipal currentUser) {
-    Room room = roomService.getRoomEntityAndCheckUser(roomId, currentUser, false);
-    return meetingRepository
-        .getByRoomId(roomId.toString())
-        .orElseGet(
-            () -> {
-              Meeting meeting =
-                  meetingRepository.insert(room.getName(), MeetingType.PERMANENT, roomId, null);
-              roomService.setMeetingIntoRoom(room, meeting);
-              videoServerService.startMeeting(meeting.getId());
-              eventDispatcher.sendToUserExchange(
-                  room.getSubscriptions().stream()
-                      .map(Subscription::getUserId)
-                      .collect(Collectors.toList()),
-                  MeetingCreated.create()
-                      .meetingId(UUID.fromString(meeting.getId()))
-                      .roomId(roomId));
-              return meeting;
-            });
-  }
-
-  @Override
   public void deleteMeetingById(UUID meetingId, UserPrincipal currentUser) {
     Meeting meeting =
         meetingRepository
@@ -228,7 +199,7 @@ public class MeetingServiceImpl implements MeetingService {
     videoServerService.stopMeeting(meeting.getId());
     meetingRepository.delete(meeting);
     eventDispatcher.sendToUserExchange(
-        room.getSubscriptions().stream().map(Subscription::getUserId).collect(Collectors.toList()),
+        room.getSubscriptions().stream().map(Subscription::getUserId).toList(),
         MeetingDeleted.create().meetingId(UUID.fromString(meeting.getId())));
   }
 }
